--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 </head>
 
 <body>
-  <h1>📅 過去◯年分の今日（自分のBluesky）</h1>
+  <h1>📅 過去5年分の今日（自分のBluesky）</h1>
   <div id="status">読み込み中…</div>
   <div id="result"></div>
 
