--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8" />
-  <title>Bluesky On Thsi Day</title>
+  <title>Bluesky On This Day</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <style>
     body {
