--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8" />
-  <title>Bluesky n年前の今日</title>
+  <title>Bluesky On This Day</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <style>
     body {
@@ -70,7 +70,7 @@
 </head>
 <body>
 
-<h1>Bluesky：n年前の今日</h1>
+<h1>Bluesky On This Day</h1>
 <div id="posts"></div>
 <div id="status">読み込み中…</div>
 
